# Gravity-Simulation-Cpp

./: .gitignore  CMakeLists.txt
include/: body.hpp  simulation.hpp  vec2.hpp
src/: BinarySystem.cpp  SunEarth.cpp  ThreeBodySystem.cpp
